--- a/sites/all/themes/orwell/assets/sass/component/_ting-object-compact.scss
+++ b/sites/all/themes/orwell/assets/sass/component/_ting-object-compact.scss
@@ -15,7 +15,7 @@
     max-width: 120px;
 
     @include grid-media($medium) {
-      max-width: 180px;
+      max-width: 156px;
     }
   }
 
@@ -33,7 +33,7 @@
     max-width: 120px;
 
     @include grid-media($medium) {
-      max-width: 180px;
+      max-width: 156px;
     }
   }
 
@@ -77,7 +77,7 @@
     text-overflow: ellipsis;
 
     @include grid-media($medium) {
-      max-width: 128px;
+      max-width: 90px;
     }
 
     .material__series-number {
